--- a/exercises/nesting/public/app.css
+++ b/exercises/nesting/public/app.css
@@ -1,22 +1,22 @@
 body h1 {
-  color: #c46;
+    color: #000;
 }
 
-.btn {
-  padding: 2px 10px;
-  border: 1px solid #c46;
-  border-radius: 2px;
+body .btn {
+    padding: 2px 10px 2px 10px;
+    border-radius: 2px;
+    border: 1px solid #c46;
+    background-color: #cc4466;
 }
 
-.btn.btn-primary {
-  background-color: #c46;
-  color: white;
+body .btn-primary {
+    color: white;
 }
 
-.btn.btn-secondary {
-  background-color: #edbcc8;
+body .btn-secondary {
+    background-color: #edbcc8;
 }
 
-.btn:disabled {
-  opacity: 0.5;
+body .btn:disabled {
+    opacity: 0.5;
 }
