--- a/exercises/nesting/src/sass/app.scss
+++ b/exercises/nesting/src/sass/app.scss
@@ -1,5 +1,20 @@
 body {
     h1 {
-    color: #c46;
-  }
+        color: #000;
+    }
+    .btn {
+        padding: 2px 10px 2px 10px;
+        border-radius: 2px;
+        border: 1px solid #c46;
+        background-color: rgb(204, 68, 102);
+        &-primary {
+            color: rgb(255, 255, 255);
+        }
+        &-secondary {
+            background-color: rgb(237, 188, 200);
+        }
+        &:disabled {
+            opacity: 0.5;
+        }
+    }
 }
