--- a/exercises/parent/public/app.css
+++ b/exercises/parent/public/app.css
@@ -11,12 +11,21 @@
 }
 
 .container .main {
-  margin-left: 220px;
   min-height: 100vh;
-  border-left: 2px solid #333;
 }
 
 .container .sidebar {
   width: 200px;
   float: left;
+}
+
+.container.right-nav .sidebar {
+  float: right;
+}
+
+.container.right-nav .main {
+  margin-left: 0;
+  margin-right: 220px;
+  border-left: none;
+  border-right: 2px solid #333;
 }
