--- a/exercises/mixins/public/app.css
+++ b/exercises/mixins/public/app.css
@@ -1,18 +1,47 @@
 .btn {
-  display: inline-block;
-  border: 1px solid transparent;
-  white-space: nowrap;
-  vertical-align: middle;
-  border-radius: 2px;
-  user-select: none;
-  transition: box-shadow 0.3s;
+    display: inline-block;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    vertical-align: middle;
+    border-radius: 2px;
+    user-select: none;
+    transition: box-shadow 0.3s;
+    color: #fff;
 }
 
 .btn:hover:not(:disabled) {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
 }
 
 .btn:disabled {
-  opacity: 0.65;
-  box-shadow: none;
+    opacity: 0.65;
+    box-shadow: none;
+}
+
+.btn.btn-yellow {
+    background-color: #990;
+}
+
+.btn.btn-blue {
+    background-color: #33a;
+}
+
+.btn.btn-green {
+    background-color: #3c3;
+}
+
+.btn.btn-purple {
+    background-color: #939;
+}
+
+.btn.btn-pink {
+    background-color: #c69;
+}
+
+.btn.btn-orange {
+    background-color: #f93;
+}
+
+.btn.btn-brown {
+    background-color: #952;
 }
