--- a/exercises/range/src/sass/_mixins.scss
+++ b/exercises/range/src/sass/_mixins.scss
@@ -1,3 +1,17 @@
-@mixin range-thumb() {
- 
-}
+		@mixin range-thumb($background: null, $borderColor: null) {
+		    &::-moz-range-thumb {
+		        @content;
+		    }
+		    &::-ms-thumb {
+		        @content;
+		    }
+		}
+		
+		@mixin range-track() {
+		    &::-webkit-slider-runnable-track {
+		        @content;
+		    }
+		    &::-moz-range-track {
+		        @content;
+		    }
+		}
