--- a/exercises/range/src/sass/_variables.scss
+++ b/exercises/range/src/sass/_variables.scss
@@ -1,10 +1,10 @@
-$hopbush: #c69 !default;
-$patina: #699 !default;
-$venus: #998099 !default;
-$nebula: #d2e1dd !default;
-
-$black: #000 !default;
-$white: #fff !default;
-
-$btn-disabled-opacity: 0.5 !default;
-
+// $hopbush: #c69 !default;
+// $patina: #699 !default;
+// $venus: #998099 !default;
+// $nebula: #d2e1dd !default;
+// $black: #000 !default;
+// $white: #fff !default;
+// $btn-disabled-opacity: 0.5 !default;
+$darkblue: #3071a9;
+$blackBorderColor: #000000;
+$range_small_border: 0.2px solid #010101;
