--- a/exercises/range/src/sass/app.scss
+++ b/exercises/range/src/sass/app.scss
@@ -1,6 +1,78 @@
 @import '_variables';
 @import '_mixins';
-
 input[type="range"] {
-  // Add your styles here
+    -webkit-appearance: none;
+    margin: 18px 0;
+    width: 100%;
+    &:focus {
+        outline: none;
+    }
+    @include range-track() {
+        width: 100%;
+        height: 8.4px;
+        cursor: pointer;
+        animate: 0.2s;
+        box-shadow: 1px 1px 1px $blackBorderColor, 0px 0px 1px #0d0d0d;
+        background: $darkblue;
+        border-radius: 1.3px;
+        border: $range_small_border;
+    }
+    &::-webkit-slider-thumb {
+        box-shadow: 1px 1px 1px $blackBorderColor, 0px 0px 1px #0d0d0d;
+        border: 1px solid $blackBorderColor;
+        height: 36px;
+        width: 16px;
+        border-radius: 3px;
+        background: #ffffff;
+        cursor: pointer;
+        -webkit-appearance: none;
+        margin-top: -14px;
+    }
+    &::-moz-range-track {
+        width: 100%;
+        height: 8.4px;
+        cursor: pointer;
+        animate: 0.2s;
+        box-shadow: 1px 1px 1px $blackBorderColor, 0px 0px 1px #0d0d0d;
+        background: $darkblue;
+        border-radius: 1.3px;
+        border: $range_small_border;
+    }
+    @include range-thumb(transparent) {
+        width: 100%;
+        height: 8.4px;
+        cursor: pointer;
+        animate: 0.2s;
+        background: transparent;
+        border-color: transparent;
+        border-width: 16px 0;
+        color: transparent;
+    }
+    &::-ms-fill-lower {
+        background: #2a6495;
+        border: $range_small_border;
+        border-radius: 2.6px;
+        box-shadow: 1px 1px 1px $blackBorderColor, 0px 0px 1px #0d0d0d;
+    }
+    &::-ms-fill-upper {
+        background: $darkblue;
+        border: $range_small_border;
+        border-radius: 2.6px;
+        box-shadow: 1px 1px 1px $blackBorderColor, 0px 0px 1px #0d0d0d;
+    }
+    &::-ms-thumb {
+        box-shadow: 1px 1px 1px $blackBorderColor, 0px 0px 1px #0d0d0d;
+        border: 1px solid $blackBorderColor;
+        height: 36px;
+        width: 16px;
+        border-radius: 3px;
+        background: #ffffff;
+        cursor: pointer;
+    }
+    &:focus::-ms-fill-lower {
+        background: $darkblue;
+    }
+    &:focus::-ms-fill-upper {
+        background: #367ebd;
+    }
 }
