--- a/exercises/variables/src/sass/app.scss
+++ b/exercises/variables/src/sass/app.scss
@@ -1,22 +1,25 @@
+@import '_variables';
 body {
     h1 {
-    color: #c69;
-  }
+        color: #c69;
+    }
 }
+
 .btn {
-  padding: 2px 10px;
-  border-radius: 2px;
-  &.btn-primary {
-    border: 1px solid rebeccapurple;
-    background-color: lawngreen;
-    color: #fff;
-  }
-  &.btn-secondary {
-    border: 1px solid cadetblue;
-    background-color: peru;
-    color: #000;
-  }
-  &:disabled {
-    opacity: 0.5;
-  }
+    padding: 2px 10px;
+    border-radius: 2px;
+    &.btn-primary {
+        border: 1px solid $venus;
+        background-color: $hopbush;
+        color: #fff;
+        padding-left: $defaultPaddingLeft;
+    }
+    &.btn-secondary {
+        border: 1px solid $patina;
+        background-color: $nebula;
+        color: #000;
+    }
+    &:disabled {
+        opacity: 0.5;
+    }
 }
